# learn-build-agent

./: .env.example  .gitignore  .python-version  AGENTS.md  README.md  dev.sh  hello.py  pyproject.toml  requirements.txt
analyze_docs/: project-context.md
docs/: architecture.md  extending.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
learn_doc/: project_runtime_learning_notes.md
src/: client.py  compact.py  context.py  main.py  todo_manager.py  todo_write.txt  tool.py  web_main.py
src/agent/: __init__.py  cli.py
src/agent/config/: llm_runtime.json  logging_setup.py  project_runtime.json  settings.py
src/agent/core/: context.py  hooks.py  message.py
src/agent/lsp/: __init__.py  client.py  documents.py  filters.py  manager.py  protocol.py  types.py
src/agent/mcp/: __init__.py  runtime.py
src/agent/runtime/: agents.py  compaction.py  session.py  session_hooks.py  session_memory.py  stream_display.py  (+3 more)
src/plan/: plan.md
storage/todo/: s1.json  s2.json  test-session-123.json
tests/: conftest.py  test_cli.py  test_client_hooks.py  test_compaction_checkpoint.py  test_handlers.py  test_logging_setup.py  test_lsp_client.py  test_lsp_manager.py  test_lsp_pylsp.py  test_lsp_typescript.py  test_main_todo_reminder.py  test_mcp_runtime.py  test_message_adapter.py  test_qwen_responses_live.py  test_run_session.py  test_session_hooks.py  test_slash_commands.py  test_tool_hooks.py  test_web_api.py  test_web_dev_server.py  test_web_path_suggestions.py  test_webfetch.py  test_websearch.py
(+61 files in other folders)
